# swtc

./: .gitignore  CMakeLists.txt  README.md  swtc.h  swtp.h
templates/executable/: CMakeLists.txt  MyFrame.cpp  MyFrame.h
tests/controls/: CMakeLists.txt  TControls.cpp  TControls.h
tests/controls/Button/: CMakeLists.txt  TButtonCircle.cpp  TButtonCircle.h  TButtonDemo.cpp  TButtonDemo.h  TButtons.cpp  TButtons.h
tests/controls/ComboBox/: CMakeLists.txt  TComboBoxs.cpp  TComboBoxs.h  TComboDemo.cpp  TComboDemo.h
tests/controls/CoolBar/: CMakeLists.txt  TCoolBarDemo.cpp  TCoolBarDemo.h  TCoolBars.cpp  TCoolBars.h
tests/controls/DateTime/: CMakeLists.txt  TDateTimeDemo.cpp  TDateTimeDemo.h  TDateTimes.cpp  TDateTimes.h
tests/controls/ExpandBar/: CMakeLists.txt  TExpandBarDemo.cpp  TExpandBarDemo.h  TExpandBars.cpp  TExpandBars.h
tests/controls/GroupBox/: CMakeLists.txt  TGroupBoxDemo.cpp  TGroupBoxDemo.h  TGroupBoxs.cpp  TGroupBoxs.h
tests/controls/Label/: CMakeLists.txt  TLabelDemo.cpp  TLabelDemo.h  TLabelLink.cpp  TLabelLink.h  TLabels.cpp  TLabels.h
tests/controls/ListView/: CMakeLists.txt  TListViewDemo.cpp  TListViewDemo.h  TListViews.cpp  TListViews.h
tests/controls/ProgressBar/: CMakeLists.txt  TProgressBarDemo.cpp  TProgressBarDemo.h  TProgressBarThread.cpp  TProgressBarThread.h  TProgressBars.cpp  TProgressBars.h
tests/controls/Sash/: CMakeLists.txt  TSashDemo.cpp  TSashDemo.h  TSashes.cpp  TSashes.h
tests/controls/Slider/: CMakeLists.txt  TSliderDemo.cpp  TSliderDemo.h  TSliders.cpp  TSliders.h
tests/controls/Spinner/: CMakeLists.txt  TSpinnerDemo.cpp  TSpinnerDemo.h  TSpinners.cpp  TSpinners.h
tests/controls/TabView/: CMakeLists.txt  TTabViewClose.cpp  TTabViewClose.h  TTabViewDemo.cpp  TTabViewDemo.h  TTabViews.cpp  TTabViews.h
tests/controls/TextEdit/: CMakeLists.txt  TTextEditDemo.cpp  TTextEditDemo.h  TTextEdits.cpp  TTextEdits.h
tests/controls/ToolBar/: CMakeLists.txt  TToolBarDemo.cpp  TToolBarDemo.h  TToolBars.cpp  TToolBars.h  TToolbarComplex.cpp  TToolbarComplex.h
tests/controls/TreeView/: CMakeLists.txt  TTreeCustom.cpp  TTreeCustom.h  TTreeDemo.cpp  TTreeDemo.h  TTreeViews.cpp  TTreeViews.h  TTreeVirtual.cpp  TTreeVirtual.h
tests/controls/WebView/: CMakeLists.txt  TWebViewDemo.cpp  TWebViewDemo.h  TWebViews.cpp  TWebViews.h
tests/graphics/: CMakeLists.txt  TGraphics.cpp  TGraphics.h
tests/graphics/Cursor/: CMakeLists.txt  TCursorDemo.cpp  TCursorDemo.h  TCursors.cpp  TCursors.h
tests/graphics/Font/: CMakeLists.txt  TFontDemo.cpp  TFontDemo.h  TFonts.cpp  TFonts.h
tests/graphics/GC/: CMakeLists.txt  TGCDemo.cpp  TGCDemo.h  TGCDrawForm.cpp  TGCDrawForm.h  TGCDrawText.cpp  TGCDrawText.h  TGCFillForm.cpp  TGCFillForm.h  TGCLine.cpp  TGCLine.h  TGCs.cpp  TGCs.h
tests/graphics/Image/: CMakeLists.txt  TImageDemo.cpp  TImageDemo.h  TImages.cpp  TImages.h
tests/graphics/ImageList/: CMakeLists.txt  TImageListDemo.cpp  TImageListDemo.h  TImageLists.cpp  TImageLists.h
tests/graphics/Path/: CMakeLists.txt  TPathDemo.cpp  TPathDemo.h  TPaths.cpp  TPaths.h
tests/graphics/Pattern/: CMakeLists.txt  TPatternDemo.cpp  TPatternDemo.h  TPatterns.cpp  TPatterns.h
tests/graphics/Region/: CMakeLists.txt  TRegionDemo.cpp  TRegionDemo.h  TRegionPolygon.cpp  TRegionPolygon.h  TRegions.cpp  TRegions.h
tests/graphics/TextLayout/: CMakeLists.txt  TTextLayoutDemo.cpp  TTextLayoutDemo.h  TTextLayouts.cpp  TTextLayouts.h
tests/graphics/Transform/: CMakeLists.txt  TTransformDemo.cpp  TTransformDemo.h  TTransformImage.cpp  TTransformImage.h  TTransforms.cpp  TTransforms.h
tests/widgets/: CMakeLists.txt  TWidgets.cpp  TWidgets.h
tests/widgets/Canvas/: CMakeLists.txt  TCanvass.cpp  TCanvass.h  TTextEditor.cpp  TTextEditor.h
tests/widgets/Caret/: CMakeLists.txt  TCaretDemo.cpp  TCaretDemo.h  TCarets.cpp  TCarets.h
tests/widgets/Composite/: CMakeLists.txt  TCompositeDemo.cpp  TCompositeDemo.h  TComposites.cpp  TComposites.h  TScrolledComposite.cpp  TScrolledComposite.h
tests/widgets/Control/: CMakeLists.txt  TControlMouse.cpp  TControlMouse.h  TControlss.cpp  TControlss.h  TDragging.cpp  TDragging.h
tests/widgets/Dialogs/: CMakeLists.txt  TDialogs.cpp  TDialogs.h  TLogin.cpp  TLogin.h
tests/widgets/Dnd/: CMakeLists.txt  TClipboard.cpp  TClipboard.h  TDNDTabView.cpp  TDNDTabView.h  TDnd.cpp  TDnd.h  TSimpleDNDExample.cpp  TSimpleDNDExample.h  TWordJumbles.cpp  TWordJumbles.h
tests/widgets/GLCanvas/: CMakeLists.txt  TGLCanvass.cpp  TGLCanvass.h
tests/widgets/Menu/: CMakeLists.txt  TMenus.cpp  TMenus.h
tests/widgets/Scrollable/: CMakeLists.txt  TScrollables.cpp  TScrollables.h
tests/widgets/Shell/: CMakeLists.txt  TShellWithRegion.cpp  TShellWithRegion.h  TShells.cpp  TShells.h
tests/widgets/TaskBar/: CMakeLists.txt  (+2 more)
(+581 files in other folders)
