	set(CURRENT_DIR tests/controls)
	set(src_controls ${src_tests})
	
	add_subdirectory(Button)
	add_subdirectory(ComboBox)
	add_subdirectory(CoolBar)
	add_subdirectory(DateTime)
	add_subdirectory(ExpandBar)
	add_subdirectory(GroupBox)
	add_subdirectory(Label)
	add_subdirectory(ListView)
	add_subdirectory(ProgressBar)
	add_subdirectory(Sash)
	add_subdirectory(Slider)
	add_subdirectory(Spinner)
	add_subdirectory(TabView)
	add_subdirectory(TextEdit)
	add_subdirectory(ToolBar)
	add_subdirectory(TreeView)
	add_subdirectory(WebView)	
	
	set(src_tests ${CURRENT_DIR}/TControls.cpp ${src_controls} PARENT_SCOPE)