	set(CURRENT_DIR tests/widgets)
	set(src_widgets ${src_tests})
	
	add_subdirectory(Canvas)
	add_subdirectory(Caret)
	add_subdirectory(Composite)
	add_subdirectory(Control)
	add_subdirectory(Dialogs)
	add_subdirectory(Dnd)
	add_subdirectory(GLCanvas)
	add_subdirectory(Menu)
	add_subdirectory(Scrollable)
	add_subdirectory(Shell)
	add_subdirectory(TaskBar)
	add_subdirectory(Theme)
	add_subdirectory(Toolkit)
	add_subdirectory(ToolTip)
	add_subdirectory(Tracker)
	add_subdirectory(Tray)
	
	set(src_tests  ${CURRENT_DIR}/TWidgets.cpp ${src_widgets} PARENT_SCOPE)